--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,7 @@ services:
       build:
          context: .
          dockerfile: Dockerfile.dev
-      command: >
-         sh -c "python manage.py wait_for_db &&
-                python manage.py migrate &&
-                python manage.py runserver 0.0.0.0:8000"
+      command: python manage.py runserver 0.0.0.0:8000
       volumes:
          - ./app:/app
       # ports:
