--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -23,4 +23,9 @@ COPY ./requirements.txt /app/requirements.txt
 
 RUN pip install -r requirements.txt
 
+RUN adduser \
+    --disabled-password \
+    --no-create-home \
+    django-user
 
+USER django-user
