fixing user bug app/urls

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
                 python manage.py runserver 0.0.0.0:8000"
       volumes:
          - ./app:/app
-      # ports:
-      #    - 8000:8000
+      ports:
+         - 8000:8000
       env_file:
          - .env
       restart: "on-failure"
