--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ sqlparse==0.4.1
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+drf-spectacular>=0.15.1,<0.16
 
 python-decouple==3.6
 Unipath==1.1
