--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -22,3 +22,6 @@ RUN pip install --upgrade pip
 COPY ./requirements.txt /app/requirements.txt
 
 RUN pip install -r requirements.txt
+
+RUN mkdir -p /vol/web/media
+RUN mkdir -p /vol/web/static
