--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,7 +13,13 @@ ENV PYTHONUNBUFFERED 1
 RUN apt-get update \
     && apt-get -y install netcat gcc postgresql \
     && apt-get clean
-
+##
+RUN apt-get update && apt-get install -y \
+    g++ \
+    python3-dev \
+    libjpeg-dev \
+    zlib1g-dev
+##
 RUN apt-get update \
     && apt-get install -y binutils libproj-dev gdal-bin python-gdal python3-gdal
 
@@ -23,5 +29,22 @@ COPY ./requirements.txt /app/requirements.txt
 
 RUN pip install -r requirements.txt
 
-RUN mkdir -p /vol/web/media
-RUN mkdir -p /vol/web/static
+#RUN adduser \
+ #   --disabled-password \
+  #  --no-create-home \
+   # django-user
+
+RUN mkdir -p /vol/web/media && \
+    mkdir -p /vol/web/static && \
+    #chown -R django-user:django-user /vol && \
+    chmod -R 755 /vol
+
+#USER django-user
+##
+
+#RUN mkdir -p /vol/web/media
+#RUN mkdir -p /vol/web/static
+#RUN adduser -D user
+#RUN chown -R user:user /vol/
+#RUN chmod -R 755 /vol/web
+#USER user
