proxy and config done, ready to deploy

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,9 @@
-POSTGRES_USER=
-POSTGRES_PASS=
-POSTGRES_DBNAME=
+DB_USER=
+DB_PASS=
+DB_NAME=
 DATABASE=
-PG_HOST=
-PG_PORT=
+DB_HOST=postgres-db
+DB_PORT=5432
 SECRET_KEY=changeme
 DEBUG=
 ALLOWED_HOSTS=127.0.0.1
