--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -14,7 +14,7 @@ services:
       - DB_PASS=${DB_PASS}
       - SECRET_KEY=${SECRET_KEY}
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
-      - DB_PORT=${DB_PORT}
+      #- DB_PORT=${DB_PORT}
     depends_on:
       - postgres-db
     networks:
